--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
+    "express-routes-mapper": "^1.1.0",
     "express-session": "^1.17.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
