--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
     "express-session": "^1.17.1",
+    "faker": "^4.1.0",
     "multer": "^1.4.2",
     "mysql": "^2.10.2",
     "nodemailer": "^6.4.10",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "socket.io": "^2.3.0"
   }
 }
