--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "circular-json": "^0.5.9",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.7-alpha.3",
