--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql": "^2.10.2",
     "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "websockets": "^0.2.0"
   }
 }
