--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "express-fileupload": "^1.1.7-alpha.3",
     "express-session": "^1.17.1",
     "faker": "^4.1.0",
+    "geolib": "^3.3.1",
     "multer": "^1.4.2",
     "mysql": "^2.10.2",
     "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4",
+    "request": "^2.88.2",
     "socket.io": "^2.3.0",
     "websockets": "^0.2.0"
   }
